# qt_learning

./: README.md  note_0.md
AwardRandom/: LICENSE  Makefile  award-pickup.pro  awardpickup.cpp  awardpickup.h  awardpickup.qrc  awardpickup.rc  awardpickup.ui  helpdialog.cpp  helpdialog.ui  main.cpp  people.cpp  people.h  setupdialog.cpp  setupdialog.h  setupdialog.ui  ui_awardpickup.h  ui_helpdialog.h  ui_setupdialog.h
BeatPlane/: .gitignore  README.md
BroadCast_QT/: main.cpp
Converser/: Makefile  Makefile.Debug  Makefile.Release  conversion.pro  dialog.cpp  dialog.h  main.cpp  moc_dialog.cpp
DigDuck/: LICENSE  README.md
ImageView/: Makefile  Makefile.Debug  Makefile.Release  MyImageView.pro  README.md  main.cpp  rs.qrc  ui_controlview.h  ui_imageview.h  ui_mainview.h  ui_mainwindow.h
MusicPlayer/: LICENSE  README.md  send.sh
MyYoudaoNoteLike/: MySqlConnection.pro  README.md  collapseviewitem.cpp  collapseviewitem.ui  collpsetestform.cpp  collpsetestform.h  collpsetestform.ui  litteriem.cpp  litteriem.h  litteriem.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mycolormapplot.cpp  mycolormapplot.h  myrealtimeplot.cpp  myrealtimeplot.h  slidewindow.cpp  slidewindow.h  slidewindow.ui  tabitem.cpp  tabitem.h  tabitem.ui  testadjust.cpp  testadjust.h  testadjust.ui  treeviewtest.cpp  treeviewtest.h  treeviewtest.ui
miniftpd/: LICENSE  Makefile.am  README.md  config.h.in  configure.in  ftpcmd.cc  ftpcmd.h  log.cc  log.h  main.cc  readconfig.cc  readconfig.h  simpleserver.h  userinfo.h  utils.h
miniftpd/lib/: epoll.cc  epoll.h  event.cc  event.h  eventloop.cc  eventloop.h  mutex.h  process.cc  process.h
miniftpd/net/: acceptor.cc  acceptor.h  buffer.cc  buffer.h  callbacks.h  ftpserver.cc  ftpserver.h  inetaddress.cc  inetaddress.h  socket.cc  socket.h  socketsops.cc  socketsops.h  tcpconnection.cc  tcpconnection.h  worker.cc  worker.h  workerprocess.cc  workerprocess.h
(+296 files in other folders)
